RESOLVED FIXED112996
[BlackBerry] Memory leak in WebPagePrivate.cpp - NavigatorContentUtilsClientBlackBerry
https://bugs.webkit.org/show_bug.cgi?id=112996
Summary [BlackBerry] Memory leak in WebPagePrivate.cpp - NavigatorContentUtilsClientB...
Xiaobo Wang
Reported 2013-03-21 20:18:59 PDT
NavigatorContentUtilsClientBlackBerry is new'ed in WebPagePrivate::init(), but not deleted anywhere. Fix by creating an OwnPtr for it.
Attachments
patch (9.81 KB, patch)
2013-03-21 21:03 PDT, Xiaobo Wang
no flags
patch (3.35 KB, patch)
2013-03-26 04:11 PDT, Xiaobo Wang
no flags
Xiaobo Wang
Comment 1 2013-03-21 21:03:21 PDT
Created attachment 194431 [details] patch PR 312552 Internally Reviewed by Anthony Scian. Also fixed some webkit-style errors.
WebKit Review Bot
Comment 2 2013-03-21 21:06:35 PDT
Attachment 194431 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/Api/WebPage.cpp', u'Source/WebKit/blackberry/Api/WebPage_p.h', u'Source/WebKit/blackberry/ChangeLog']" exit_code: 1 Source/WebKit/blackberry/Api/WebPage.cpp:3656: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Source/WebKit/blackberry/Api/WebPage.cpp:5495: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Xiaobo Wang
Comment 3 2013-03-26 04:11:39 PDT
Created attachment 195055 [details] patch Revised to only include my change.
Rob Buis
Comment 4 2013-03-26 07:07:20 PDT
Comment on attachment 195055 [details] patch LGTM.
WebKit Review Bot
Comment 5 2013-03-26 19:23:03 PDT
Comment on attachment 195055 [details] patch Clearing flags on attachment: 195055 Committed r146960: <http://trac.webkit.org/changeset/146960>
WebKit Review Bot
Comment 6 2013-03-26 19:23:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.