[BlackBerry] Memory leak in WebPagePrivate.cpp - NavigatorContentUtilsClientBlackBerry https://bugs.webkit.org/show_bug.cgi?id=112996

Patch by Xiaobo Wang <xbwang@torchmobile.com.cn> on 2013-03-26
Reviewed by Rob Buis.

PR 312552
Internally Reviewed by Anthony Scian.

NavigatorContentUtilsClientBlackBerry is new'ed in WebPagePrivate::init(),
but not deleted anywhere. Fixed by creating an OwnPtr for it.
Also fixed some webkit-style errors.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::init):
* Api/WebPage_p.h:
(WebCore):
(WebPagePrivate):

Canonical link: https://commits.webkit.org/131704@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146960 268f45cc-cd09-0410-ab3c-d52691b4dbfc